feat: adicionando getAll Pedidos